// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test: Icon[site/pages/components/Icon/example-1-awesome.tsx] 1`] = `
<div>
  <i />
  <i />
  <i />
  <i />
</div>
`;

exports[`Snapshot test: Icon[site/pages/components/Icon/example-2-iconfont.tsx] 1`] = `
<div>
  <i>
    <svg>
      <use />
    </svg>
  </i>
  <i>
    <svg>
      <use />
    </svg>
  </i>
  <i>
    
  </i>
  <i />
</div>
`;

exports[`Snapshot test: Icon[site/pages/components/Icon/example-3-size.tsx] 1`] = `
<div>
  <i />
  <i />
  <i />
  <i />
</div>
`;
